# sonarqube-bug

./: README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
foo/baz/: __init__.py
foo/fizz/: buzz.py
libs/foo-bar/: pyproject.toml
libs/foo-bar/tests/bar/: test_bar.py
